<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Payments.PaymentFragment"
    android:background="@color/colorDividerOp60">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardPayments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtCardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/card_title"
                android:textSize="20sp"
                android:textStyle="italic" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cardRecycler"
                android:layout_width="match_parent"
                android:layout_height="120dp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCardThumbs"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:scaleType="fitXY"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCardBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/card_btn_back"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCardFinish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/card_btn_finish"
                    android:layout_weight="1"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCardFordward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/card_btn_fordward"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>
        </LinearLayout>




    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>